--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
+    "typescript": "5.1.6"
   }
 }
